<resources>
    <string name="app_name">ApliFut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuEquipos">Equipos</string>
    <string name="menuPartidos">Partidos</string>
    <string name="menuMarcadores">Mis Marcadores</string>
    <string name="PJ">PJ</string>
    <string name="G">G</string>
    <string name="E">E</string>
    <string name="P">P</string>
    <string name="GF">GF</string>
    <string name="GC">GC</string>
    <string name="DG">DG</string>
    <string name="Pts">Pts</string>
    <string name="scan_canceled">Cancelado</string>
    <string name="nombreJugador">Nombre</string>
    <string name="apellidoJugador">Apellido</string>
    <string name="equipoJugador">Equipo</string>
    <string name="totalGolesJugador">Goles Totales</string>
    <string name="marcadorBorrado">Marcador Eliminado</string>
    <string name="marcadorGuardado">Marcador Guardado</string>
    <string name="tab_Equipos">Equipos</string>
    <string name="tab_Marcadores">Mis Marcadores</string>
    <string name="tab_Partidos">Partidos</string>

</resources>
