<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EquipoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardCornerRadius="4dp"
    cardview:cardElevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgEquipo"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/nombreEquipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="10dp"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PJ"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/PJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PJ"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/G"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/G"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/G"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/E"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/E"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/P"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/P"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/P"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GF"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/GF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GF"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GC"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/GC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GC"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DG"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/DG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DG"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <View
                android:layout_width="30dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pts"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/Pts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pts"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>